// The online diagram is authoritative. This is a local, convenience copy and may be out of date

// Use DBML to define your database structure
// Docs: https://github.com/holistics/dbml/tree/master/dbml-homepage/docs

Table scenario {
  scenario_id integer [increment, primary key]
  scenario_name varchar
  scenario_descr varchar
  account_type_id integer
  scenario_parent_id integer
  created_at timestamp [default: `now()`]
  modified_at timestamp [default: `now()`]
}

Table account_type {
  account_type_id integer [primary key]
  account_type_descr varchar
  created_at timestamp [default: `now()`]
  modified_at timestamp [default: `now()`]
}

Table expense {
  expense_id integer [increment, primary key]
  scenario_id integer
  expense_name varchar
  expense_descr varchar
  amount DECIMAL(13, 2)
  inflation_rate DECIMAL(5, 3)
  begin_year integer
  begin_month integer
  end_year integer
  end_month integer
  repeat_every integer
  created_at timestamp [default: `now()`]
  modified_at timestamp [default: `now()`]
}

Table asset {
  asset_id integer [increment, primary key]
  scenario_id integer
  asset_name varchar
  asset_descr varchar
  opening_balance DECIMAL(13, 2)
  max_withdrawal DECIMAL(13, 2)
  apr DECIMAL(5, 3)
  begin_after integer
  begin_year integer
  begin_month integer
  created_at timestamp [default: `now()`]
  modified_at timestamp [default: `now()`]
}

Ref: scenario.account_type_id > account_type.account_type_id

Ref: expense.scenario_id > scenario.scenario_id

Ref: asset.scenario_id > scenario.scenario_id
